sintatico.output
   0  $accept : %entry% $end

   1  programa : funcao EOF

   2  funcao : PROGRAM ID PTVIRG BEGIN comandos PTVIRG END PF

   3  comandos : RETURN ATRIB expressao

   4  expressao : INT

   5  %entry% : '\001' programa

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . programa  (5)

	PROGRAM  shift 3
	.  error

	programa  goto 4
	funcao  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	funcao : PROGRAM . ID PTVIRG BEGIN comandos PTVIRG END PF  (2)

	ID  shift 6
	.  error


state 4
	%entry% : '\001' programa .  (5)

	.  reduce 5


state 5
	programa : funcao . EOF  (1)

	EOF  shift 7
	.  error


state 6
	funcao : PROGRAM ID . PTVIRG BEGIN comandos PTVIRG END PF  (2)

	PTVIRG  shift 8
	.  error


state 7
	programa : funcao EOF .  (1)

	.  reduce 1


state 8
	funcao : PROGRAM ID PTVIRG . BEGIN comandos PTVIRG END PF  (2)

	BEGIN  shift 9
	.  error


state 9
	funcao : PROGRAM ID PTVIRG BEGIN . comandos PTVIRG END PF  (2)

	RETURN  shift 10
	.  error

	comandos  goto 11


state 10
	comandos : RETURN . ATRIB expressao  (3)

	ATRIB  shift 12
	.  error


state 11
	funcao : PROGRAM ID PTVIRG BEGIN comandos . PTVIRG END PF  (2)

	PTVIRG  shift 13
	.  error


state 12
	comandos : RETURN ATRIB . expressao  (3)

	INT  shift 14
	.  error

	expressao  goto 15


state 13
	funcao : PROGRAM ID PTVIRG BEGIN comandos PTVIRG . END PF  (2)

	END  shift 16
	.  error


state 14
	expressao : INT .  (4)

	.  reduce 4


state 15
	comandos : RETURN ATRIB expressao .  (3)

	.  reduce 3


state 16
	funcao : PROGRAM ID PTVIRG BEGIN comandos PTVIRG END . PF  (2)

	PF  shift 17
	.  error


state 17
	funcao : PROGRAM ID PTVIRG BEGIN comandos PTVIRG END PF .  (2)

	.  reduce 2


18 terminals, 6 nonterminals
6 grammar rules, 18 states
